--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "labs",
   "version": "1.0.0",
   "description": "",
-  "main": "backtracking.js",
+  "main": "",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
